# django_aiogram_biobot

./: .env.copy  Makefile  manage.py  pyproject.toml  setup.cfg
aiobot/: admin.py  apps.py  models.py
aiobot/management/commands/: runbot.py
aiobot/migrations/: 0001_initial.py  0002_productimage_productimage_max_image_count.py  0003_product_main_image.py  0004_alter_producttranslation_description.py  0005_order.py  0006_alter_tguser_options_tguser_joined_at.py
aiobot/robot/: config.py  validators.py
aiobot/robot/handlers/: __init__.py  base.py
aiobot/robot/handlers/orders/: __init__.py  order_product.py
aiobot/robot/handlers/products/: __init__.py  product_detail.py  product_list.py
aiobot/robot/handlers/users/: __init__.py  menu.py  start.py
aiobot/robot/handlers/users/register/: __init__.py  language.py  name_and_phone.py
aiobot/static/styles/ckeditor/: editor.css
locale/cyr/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
